# developer-environment-setup

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DEVELOPER_GUIDE.md  ENHANCEMENT_SUMMARY.md  GITHUB_INSTRUCTIONS.md  GITHUB_PAGES_SETUP.md  PROJECT_COMPLETION_REPORT.md  PROJECT_SUMMARY.md  README.md  ROADMAP.md  WEBSITE_FEATURES.md
.github/workflows/: code-quality.yml  docker-build.yml  nodejs-ci.yml  pages.yml  python-ci.yml
config/: .eslintrc.json  .prettierrc  .prettierrc.json  commitlint.config.js  docker-compose.yml  jest.config.js  package.json.example  setup.cfg  tsconfig.json
config/git-hooks/: commit-msg  pre-commit
config/kubernetes/: README.md
config/terraform/: README.md
docs/: AWS_CLI_GUIDE.md  DOCKER_CHEATSHEET.md  DOCKER_SETUP.md  ERROR_REFERENCE.md  FAQ.md  GIT_CHEATSHEET.md  GIT_SETUP.md  INSTALLATION_GUIDE.md  KEYBOARD_SHORTCUTS.md  LEARNING_PATH.md  NODEJS_SETUP.md  PROJECT_IDEAS.md  PYTHON_SETUP.md  QUICK_START.md  REQUIREMENTS.md  TESTING_GUIDE.md  TROUBLESHOOTING.md
scripts/: cleanup.ps1  health-check.ps1  setup-databases.ps1  setup-linux.sh  setup-macos.sh  setup.ps1  update-checker.ps1  verify-installation.ps1
templates/business/: README.md  client-communication-templates.md  contract-template.md  freelancer-resources.md  invoice-template.md  project-estimation-template.md  proposal-template.md  time-tracking-template.md
templates/django-starter/: .env.example  README.md  manage.py  requirements.txt
website/: index-enhanced.html  index.html  script-enhanced.js  script.js  styles-enhanced.css  styles.css
(+28 files in other folders)
