[metadata]
name = my-project
version = 1.0.0
author = Your Name
author_email = your-email@example.com
description = A Python project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/my-project
project_urls =
    Bug Tracker = https://github.com/yourusername/my-project/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    requests>=2.28.0
    python-dotenv>=0.20.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.0
    black>=22.0
    flake8>=4.0
    mypy>=0.950
